# DMFrechet2020

./: CMakeLists.txt  README.md
Anglais-M1-CT-2020/: 1- Part 2_instructions.asf  Final exam M1 S1 answer sheet (sujet 1).docx
resources/: traj1.txt  traj2.txt
src/omp/: frechet.cpp
src/std/: frechet.cpp
